Code formatting, exceptions.